@@ -12,10 +12,11 @@ srcpd-2.1.2 (2012-11-??)
     o Provide 28 speed steps for DCC in dll module.
     o Read initial power state from IB on startup.
     o Provide functions F17 - F28 in IB module (OpenDCC)
+    o IB module: Show firmware versions in readable manner.
 
   General Changes
     o Improve conectivity to usb2serial adapters for Loconet module.
-    o Support for Open-BSD.
+    o Support for OpenBSD.
 
 
 srcpd-2.1.1 (2010-03-07)
